--- a/assets/packages.tex
+++ b/assets/packages.tex
@@ -8,9 +8,10 @@
 % \titleformat{\section}{\sffamily\Large\bfseries\rlap{\color{blue}\rule[-0.5ex]{\linewidth}{3ex}\vspace{-3ex}}\sffamily\Large\bfseries\color{white}}{\thesection}{1em}{}
 % 
 
-\usepackage{graphicx}
-\usepackage[, x11names]{xcolor}
+%\usepackage{graphicx}
+%\usepackage[, x11names]{xcolor}
 
-\usepackage{titlesec}
+%\usepackage{titlesec}
+%\titleformat{\section}{\LARGE}{\rlap{\color{Aquamarine1!92!Chartreuse1}\rule[-0.4cm]{\linewidth}{1.2cm}} \thesection}{1em}{}
 
-\titleformat{\section}{\LARGE}{\rlap{\color{Aquamarine1!92!Chartreuse1}\rule[-0.4cm]{\linewidth}{1.2cm}} \thesection}{1em}{}
+\usepackage{textcomp}
